--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -1,13 +1,18 @@
 on:
   push
-
 name: first-test
-
 jobs:
-
   job-1:
+    name: Job 1: Install an R packag on Ubuntu
     runs-on: ubuntu-24.04
-    name: ubuntu-24.04 (release)
+    steps:
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: release
+      - uses: r-lib/actions/setup-pandoc@v2
+  job-2:
+    name: Job 2: Say hallo on Windows
+    runs-on: windows
     steps:
       - name: Say hello
         run: echo "Hello, world!"
