--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -3,7 +3,7 @@ on:
 name: first-test
 jobs:
   job-1:
-    name: Job 1: Install an R packag on Ubuntu
+    name: "Job 1: Install an R packag on Ubuntu"
     runs-on: ubuntu-24.04
     steps:
       - uses: r-lib/actions/setup-r@v2
@@ -11,7 +11,7 @@ jobs:
           r-version: release
       - uses: r-lib/actions/setup-pandoc@v2
   job-2:
-    name: Job 2: Say hallo on Windows
+    name: "Job 2: Say hallo on Windows"
     runs-on: windows
     steps:
       - name: Say hello
