--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: r-lib/actions/setup-pandoc@v2
   job-2:
     name: "Job 2: Say hallo on Windows"
-    runs-on: windows
+    runs-on: windows-latest
     steps:
       - name: Say hello
         run: echo "Hello, world!"
