--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -3,13 +3,19 @@ on:
 name: first-test
 jobs:
   job-1:
-    name: "Job 1: Install an R packag on Ubuntu"
+    name: "Job 1: Install an R package on Ubuntu"
     runs-on: ubuntu-24.04
     steps:
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: release
       - uses: r-lib/actions/setup-pandoc@v2
+      - uses: r-lib/actions/checkout@v2
+      - name: Install and load R package sf
+        shell: RScript {0}
+        run: |
+          install.packages("sf")
+          library(sf)
   job-2:
     name: "Job 2: Say hallo on Windows"
     runs-on: windows-latest
