--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -14,6 +14,7 @@ jobs:
       - name: Install and load R package sf
         shell: Rscript {0}
         run: |
+          install.packages("units")
           install.packages("sf")
           library(sf)
   job-2:
