--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install Linux packages
         run: |
-          sudo apt-get install -y libudunits2-dev
+          sudo apt-get install -y libgdal-dev libudunits2-dev
       - name: Install and load R package sf
         shell: Rscript {0}
         run: |        
