--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -6,11 +6,25 @@ jobs:
     name: "Job 1: Install an R package on Ubuntu"
     runs-on: ubuntu-24.04
     steps:
-      - uses: r-lib/actions/setup-r@v2
+      - name: Install R
+        uses: r-lib/actions/setup-r@v2
         with:
           r-version: release
-      - uses: r-lib/actions/setup-pandoc@v2
-      - uses: actions/checkout@v2
+      - name: Install remotes
+        shell: Rscript {0}
+        run: | 
+          install.packages("remotes")
+          print(Sys.getenv("GITHUB_PAT"))
+          print(remotes:::github_pat())        
+      - name: Install and load R package sf
+        shell: Rscript {0}
+        run: |        
+          install.packages("units")
+          install.packages("sf")          
+      - name: Install pandoc
+        uses: r-lib/actions/setup-pandoc@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
       - name: Install Linux packages
         run: |
           sudo apt-get install -y libgdal-dev libudunits2-dev
@@ -21,6 +35,7 @@ jobs:
           install.packages("sf")
           install.packages("remotes")
           print(Sys.getenv("GITHUB_PAT"))
+          print(remotes:::github_pat())
           Sys.unsetenv("GITHUB_PAT")
           remotes::install_github("kwb-r/kwb.rabimo", upgrade = "never")
   job-2:
