--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -14,34 +14,35 @@ jobs:
         shell: Rscript {0}
         run: | 
           install.packages("remotes")
-          print(Sys.getenv("GITHUB_PAT"))
-          print(remotes:::github_pat(quiet = FALSE))
-      - name: Install and load R package sf
-        shell: Rscript {0}
-        run: |        
-          install.packages("units")
-          install.packages("sf")          
-      - name: Install pandoc
-        uses: r-lib/actions/setup-pandoc@v2
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Install Linux packages
-        run: |
-          sudo apt-get install -y libgdal-dev libudunits2-dev
-      - name: Install and load R package sf
-        shell: Rscript {0}
-        run: |        
-          install.packages("units")
-          install.packages("sf")
-          install.packages("remotes")
-          print(Sys.getenv("GITHUB_PAT"))
-          print(remotes:::github_pat())
-          Sys.unsetenv("GITHUB_PAT")
-          remotes::install_github("kwb-r/kwb.rabimo", upgrade = "never")
-  job-2:
-    name: "Job 2: Say hallo on Windows"
-    runs-on: windows-latest
-    steps:
-      - name: Say hello
-        run: echo "Hello, world!"
+          cat("GITHUB_PAT:", Sys.getenv("GITHUB_PAT"), "\n")
+          cat("GITHUB_TOKEN:", Sys.getenv("GITHUB_TOKEN"), "\n")
+          cat("remotes:::github_pat():", remotes:::github_pat(quiet = FALSE), "\n")
+#      - name: Install and load R package sf
+#        shell: Rscript {0}
+#        run: |        
+#          install.packages("units")
+#          install.packages("sf")          
+#      - name: Install pandoc
+#        uses: r-lib/actions/setup-pandoc@v2
+#      - name: Checkout repository
+#        uses: actions/checkout@v2
+#      - name: Install Linux packages
+#        run: |
+#          sudo apt-get install -y libgdal-dev libudunits2-dev
+#      - name: Install and load R package sf
+#        shell: Rscript {0}
+#        run: |        
+#          install.packages("units")
+#          install.packages("sf")
+#          install.packages("remotes")
+#          print(Sys.getenv("GITHUB_PAT"))
+#          print(remotes:::github_pat())
+#          Sys.unsetenv("GITHUB_PAT")
+#          remotes::install_github("kwb-r/kwb.rabimo", upgrade = "never")
+#  job-2:
+#    name: "Job 2: Say hallo on Windows"
+#    runs-on: windows-latest
+#    steps:
+#      - name: Say hello
+#        run: echo "Hello, world!"
     
