--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -5,6 +5,8 @@ jobs:
   job-1:
     name: "Job 1: Install an R package on Ubuntu"
     runs-on: ubuntu-24.04
+    env:
+      GITHUB_PAT: ${{ secrets.GH_TOKEN }}
     steps:
       - name: Install R
         uses: r-lib/actions/setup-r@v2
@@ -17,7 +19,7 @@ jobs:
           cat("GITHUB_PAT:", Sys.getenv("GITHUB_PAT"), "\n")
           cat("GITHUB_TOKEN:", Sys.getenv("GITHUB_TOKEN"), "\n")
           cat("remotes:::github_pat():", remotes:::github_pat(quiet = FALSE), "\n")
-          remotes::install_github("kwb-r/kwb.rabimo", upgrade = "never", auth_token = NULL)
+          remotes::install_github("kwb-r/kwb.rabimo", upgrade = "never")
 #      - name: Install and load R package sf
 #        shell: Rscript {0}
 #        run: |        
