--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -12,30 +12,14 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: release
-      - name: Install and load R package sf
-        shell: Rscript {0}
-        run: |        
-          install.packages("units")
-          install.packages("sf")          
       - name: Install pandoc
         uses: r-lib/actions/setup-pandoc@v2
-      - name: Checkout repository
-        uses: actions/checkout@v2
       - name: Install Linux packages
         run: |
           sudo apt-get install -y libgdal-dev libudunits2-dev
       - name: Install and load R package sf
         shell: Rscript {0}
         run: |        
-          install.packages("units")
-          install.packages("sf")
-          install.packages("remotes")
+          install.packages(c("units", "sf", "remotes"))
           remotes::install_github("kwb-r/kwb.rabimo", upgrade = "never")
           library(kwb.rabimo)
-#  job-2:
-#    name: "Job 2: Say hallo on Windows"
-#    runs-on: windows-latest
-#    steps:
-#      - name: Say hello
-#        run: echo "Hello, world!"
-    
