--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -3,23 +3,8 @@ on:
 name: first-test
 jobs:
   job-1:
-    name: "Job 1: Install an R package on Ubuntu"
+    name: "List env variables"
     runs-on: ubuntu-24.04
-    env:
-      GITHUB_PAT: ${{ secrets.GH_TOKEN }}
     steps:
-      - name: Install R
-        uses: r-lib/actions/setup-r@v2
-        with:
-          r-version: release
-      - name: Install pandoc
-        uses: r-lib/actions/setup-pandoc@v2
-      - name: Install Linux packages
-        run: |
-          sudo apt-get install -y libgdal-dev libudunits2-dev
-      - name: Install and load R package sf
-        shell: Rscript {0}
-        run: |        
-          install.packages(c("units", "sf", "remotes"))
-          remotes::install_github("kwb-r/kwb.rabimo", upgrade = "never")
-          library(kwb.rabimo)
+      - name: List env variables
+        run: set
