--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -9,6 +9,7 @@ jobs:
       - name: List env variables
         run: |
           set | grep "^GITHUB_"
+          ls -l $GITHUB_ENV
           short_sha=$(echo $GITHUB_SHA | cut -c 1-8)
           echo "GITHUB_SHA long:  $GITHUB_SHA"
           echo "GITHUB_SHA short: $short_sha"
