--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -10,6 +10,7 @@ jobs:
         run: |
           set | grep "^GITHUB_"
           ls -l $GITHUB_ENV
+          cat $GITHUB_ENV
           short_sha=$(echo $GITHUB_SHA | cut -c 1-8)
           echo "GITHUB_SHA long:  $GITHUB_SHA"
           echo "GITHUB_SHA short: $short_sha"
