--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -6,11 +6,14 @@ jobs:
     name: "List env variables"
     runs-on: ubuntu-24.04
     steps:
-      - name: List env variables
+      - name: Set short sha
         run: |
           set | grep "^GITHUB_"
-          ls -l $GITHUB_ENV
-          cat $GITHUB_ENV
           short_sha=$(echo $GITHUB_SHA | cut -c 1-8)
           echo "GITHUB_SHA long:  $GITHUB_SHA"
           echo "GITHUB_SHA short: $short_sha"
+          echo "short_sha=$short_sha" >> $GITHUB_ENV
+      - name: Read short sha
+        run: 
+          cat $GITHUB_ENV
+          echo $short_sha
