--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -12,7 +12,7 @@ jobs:
           short_sha=$(echo $GITHUB_SHA | cut -c 1-8)
           echo "GITHUB_SHA long:  $GITHUB_SHA"
           echo "GITHUB_SHA short: $short_sha"
-          echo "short_sha=$short_sha" >> $GITHUB_ENV
+          #echo "short_sha=$short_sha" >> $GITHUB_ENV
       - name: Read short sha
         run: |
           printf "Content of $GITHUB_ENV:\n>>>>"
