--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -7,18 +7,6 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - name: Set short sha
-        run: |
-          set | grep "^GITHUB_"
-          short_sha=$(echo $GITHUB_SHA | cut -c 1-8)
-          echo "GITHUB_SHA long:  $GITHUB_SHA"
-          echo "GITHUB_SHA short: $short_sha"
-          echo "short_sha=$short_sha" >> $GITHUB_ENV
+        run: echo "short_sha=$(echo $GITHUB_SHA | cut -c 1-8)" >> $GITHUB_ENV
       - name: Read short sha
-        env:
-          local_short_sha: $(echo $GITHUB_SHA | cut -c 1-8)
-        run: |
-          printf "Content of $GITHUB_ENV:\n>>>>"
-          cat $GITHUB_ENV
-          printf "<<<<\n"
-          echo "short_sha: $short_sha"
-          echo "local_short_sha: $local_short_sha"
+        run: echo ${{ env.short_sha }} 
